UIKit: add buttonCombo.tsx and fix gap for buttonWithIcon

--- a/packages/uikit/components/buttonWithIcon/buttonWithIcon.module.scss
+++ b/packages/uikit/components/buttonWithIcon/buttonWithIcon.module.scss
@@ -20,7 +20,6 @@
   transition: var(#{$theme}#{$button}#{$transition});
   height: var(#{$theme+$input+$height});
   width: max-content;
-  gap: var(#{$theme+$input+$padding+$horizontal});
   cursor: pointer;
 
   &:hover {
